--- a/doc/tutorial/tutorial-export.tex
+++ b/doc/tutorial/tutorial-export.tex
@@ -141,7 +141,7 @@ This can take time.
 
 \begin{verbatim}
   ///////////////////////////
-  // test_D_export_01
+  cy.log("// test_D_export_01")
 
     cy.log("TODO, no tutorial testing on export menu/report")
     // TODO
