--- a/doc/tutorial/tutorial-server.tex
+++ b/doc/tutorial/tutorial-server.tex
@@ -57,7 +57,7 @@ upper left corner
 }
 \begin{verbatim}
   ///////////////////////////
-  // test_002_add_new_patient
+  cy.log("// test_002_add_new_patient")
     cy.goToPatientPage()
     cy.get('[onclick="db.call(\'sample_set/form\', {\'type\': \'patient\'})"]')
     .click()
@@ -78,7 +78,7 @@ upper left corner
 }
 \begin{verbatim}
   ///////////////////////////
-  // test_003_add_new_patient
+  cy.log("// test_003_add_new_patient")
     // Add 2 new patients + run lines
     cy.get("#patient_button").click()
     cy.get("#patient_button").click()
@@ -98,7 +98,7 @@ upper left corner
   optionally, the other fields.}
 \begin{verbatim}
   ////////////////////////////
-  // test_004_fill_new_patient
+  cy.log("// test_004_fill_new_patient")
 
     ## Add 2 new patients + run lines
     $b.span(:id => "run_button").click
@@ -131,7 +131,7 @@ can be suggested later on).
     patient with \#B-ALL}. For patient 2, enter \texttt{\#blood sample \#CLL}.
   For patient 4, enter \texttt{bone \#marrow \#B-ALL}}
 \begin{verbatim}
-  def test_005_change_description
+  cy.log("// test_005_change_description")
     ## Fill forms
     $b.fill_patient_form(0, "id_p1", "First_name_1", "Last_name_1", "2000-01-01", "#diagnosis of patient with #B-ALL")
     $b.fill_patient_form(1, "id_p2", "First_name_2", "Last_name_2", "2000-01-01", "#blood sample #CLL")
@@ -159,7 +159,7 @@ the sequence files yet.
 \question{Now go to the \com{runs} page. You should see the run you have just
   created. Click on it. Then click on \com{+ add samples}.}
 \begin{verbatim}
-  def test_006_add_new_run
+  cy.log("// test_006_add_new_run")
     $b.a(:class => "button button_token run_token", :text => "runs").click
     Watir::Wait.until(30) {$b.execute_script("return jQuery.active") == 0}
 
@@ -176,7 +176,7 @@ want on this page.
 \question{As we need to upload three samples, click twice on the \com{add
     other sample} button so that you have three lines to add a sample.}
 \begin{verbatim}
-  def test_007_add_new_samples_line_in_run
+  cy.log("// test_007_add_new_samples_line_in_run")
     $b.element(:class => "button2", :text => "+ add samples").click
     Watir::Wait.until(30) {$b.execute_script("return jQuery.active") == 0}
 
@@ -195,7 +195,7 @@ want on this page.
   respectively for patient 2 and 3). You can also add extra information, including
   tags, as previously.}
 \begin{verbatim}
-  def test_008_upload_new_samples_in_run
+  cy.log("// test_008_upload_new_samples_in_run")
     path = "../../../../../../tutorial/"
     $b.fill_sample_form(0, "2010-01-01", "Sample 1 from tutorial server test #functional #tutorial", path+"run1-sample1.fasta", nil)
     $b.fill_sample_form(1, "2010-01-01", "Sample 2 from tutorial server test #functional #tutorial", path+"run1-sample2.fasta", nil)
@@ -217,7 +217,7 @@ need to modify this field.
   name. Then validate with \com{Enter} or by clicking on the correct entry.}
 \begin{verbatim}
  
-  def test_009_upload_sample_set_common_sets
+  cy.log("// test_009_upload_sample_set_common_sets")
     # $b.fill_sample_token_input_by_arrow(0, 3) # by arrow move; select third sample in list (patient "Last_name_1")
     $b.fill_sample_token_input_by_name(0, "Last_name_1")  # by text setting
     $b.fill_sample_token_input_by_name(1, "Last_name_2")  # by text setting
@@ -230,7 +230,7 @@ need to modify this field.
 \question{When you have associated each sample to its corresponding patient
   you can upload the samples by clicking on the \com{Submit samples} button.}
 \begin{verbatim}
-  def test_010_upload_sample_submit
+  cy.log("// test_010_upload_sample_submit")
     $b.input(:id => "submit_samples_btn").click
     Watir::Wait.until(30) {$b.execute_script("return jQuery.active") == 0}
   end
@@ -244,7 +244,7 @@ that are being uploaded.
 configuration in the drop down at the right (\com{multi+inc+xxx}) and then
 clicking on the gearwheel.}
 \begin{verbatim}
-  def test_011_launch_analysis_sample
+  cy.log("// test_011_launch_analysis_sample")
     $b.select_configutation_in_available_list("multi+inc+xxx")
     Watir::Wait.until(30) {$b.execute_script("return jQuery.active") == 0}
     gearwheels = $b.elements(:class => "icon-cog-2")
@@ -264,7 +264,7 @@ launched.
   (possibly \com{STOPPED}), \com{ASSIGNED}, \com{RUNNING}, \com{COMPLETED} (or
   \com{FAILED} when there is an issue, in such a case please contact us)}
 \begin{verbatim}
-  def test_012_sample_analysis
+  cy.log("// test_012_sample_analysis")
     def wait_and_reload(timeout, repeatition)
       repeatition.times do
         print "new repeatition"
@@ -299,7 +299,7 @@ Instead we will remain on the server.
   Enter \texttt{\#B-ALL} in the search box (notice the autocompletion that helps you)
   and validate with \com{Enter}.}
 \begin{verbatim}
-  def test_013_patient_page_and_filter
+  cy.log("// test_013_patient_page_and_filter")
     $b.go_to_list_patient
 
     filter = $b.text_field(:id => "db_filter_input")
