--- a/doc/tutorial/tutorial-server.tex
+++ b/doc/tutorial/tutorial-server.tex
@@ -31,7 +31,7 @@ them to a same \com{run} and each of them to a single \com{patient}.
 }
 \begin{verbatim}
 
-  cy.goToPatientPage()
+  cy.goToUsersPage()
   cy.log(`There are ${cy.getTableLength("#table_users")} patients`)
   cy.getTableLength("#table_users").should('be.lt', 20)
 
@@ -83,14 +83,11 @@ upper left corner
     cy.get("#patient_button").click()
     cy.get("#patient_button").click()
 
-    /**
-    $b.span(:id => "patient_button").click
-    # delete last line
-    form = $b.set_add_form
-    form.elements(:class => "icon-cancel")[2].click
-    # add another new line
-    $b.span(:id => "patient_button").click
-  end
+    // delete last line
+    cy.get(':nth-child(3) > .icon-cancel').click()
+
+    // add another new line
+    cy.get("#patient_button").click()
 
 \end{verbatim}
 
@@ -99,16 +96,18 @@ upper left corner
 \begin{verbatim}
   ////////////////////////////
   cy.log("// test_004_fill_new_patient")
+    // Add 2 new patients + run lines
+    cy.get('#run_button').click()
+    cy.get('#group_select')
+      .select("public")
+      .trigger("change")
 
-    ## Add 2 new patients + run lines
-    $b.span(:id => "run_button").click
-    $b.set_selected_owner_grp("public")
 
-    ## Fill forms
-    cy.createPatient(0, "id_p1", "First_name_1", "Last_name_1", "2000-01-01", "")
-    cy.createPatient(1, "id_p2", "First_name_2", "Last_name_2", "2000-01-01", "")
-    cy.createPatient(3, "id_p3", "First_name_3", "Last_name_3", "2000-01-01", "")
-    cy.createRun(0, "id_r1", "run_name 1", "2010-01-01", "run informations #tagtest")
+    // Fill forms
+    cy.fillPatient(0, "id_p1", "First_name_1", "Last_name_1", "2000-01-01", "")
+    cy.fillPatient(1, "id_p2", "First_name_2", "Last_name_2", "2000-01-01", "")
+    cy.fillPatient(3, "id_p3", "First_name_3", "Last_name_3", "2000-01-01", "")
+    cy.fillRun(0, "id_r1", "run_name 1", "2010-01-01", "run informations #tagtest")
  
 
 \end{verbatim}
@@ -132,20 +131,20 @@ can be suggested later on).
   For patient 4, enter \texttt{bone \#marrow \#B-ALL}}
 \begin{verbatim}
   cy.log("// test_005_change_description")
-    ## Fill forms
-    $b.fill_patient_form(0, "id_p1", "First_name_1", "Last_name_1", "2000-01-01", "#diagnosis of patient with #B-ALL")
-    $b.fill_patient_form(1, "id_p2", "First_name_2", "Last_name_2", "2000-01-01", "#blood sample #CLL")
-    $b.fill_patient_form(3, "id_p3", "First_name_3", "Last_name_3", "2000-01-01", "bone #marrow #B-ALL")
-    $b.set_add_form.input(:type => 'submit').click
+    // Fill forms
+    cy.fillPatient(0, "id_p1", "First_name_1", "Last_name_1", "2000-01-01", "#diagnosis of patient with #B-ALL")
+    cy.fillPatient(1, "id_p2", "First_name_2", "Last_name_2", "2000-01-01", "#blood sample #CLL")
+    cy.fillPatient(3, "id_p3", "First_name_3", "Last_name_3", "2000-01-01", "bone #marrow #B-ALL")
 
-    Watir::Wait.until(30) {$b.execute_script("return jQuery.active") == 0}
+    cy.get('#object_form > .btn')
+      .should("have.value", "save")
+      .click()
 
-    # land on patient page
-    tokens = $b.elements(:class => ["set_token", "patient_token"])
-    assert( tokens[0].text.include? "Last_name_3 First_name_3" )
-    assert( tokens[1].text.include? "Last_name_2 First_name_2" )
-    assert( tokens[2].text.include? "Last_name_1 First_name_1" )
-  end
+    // land on patient page
+    cy.get('tr').contains("Last_name_1 First_name_1 ")
+    cy.get('tr').contains("Last_name_2 First_name_2 ")
+    cy.get('tr').contains("Last_name_3 First_name_3 ")
+
 
 \end{verbatim}
 
@@ -160,13 +159,11 @@ the sequence files yet.
   created. Click on it. Then click on \com{+ add samples}.}
 \begin{verbatim}
   cy.log("// test_006_add_new_run")
-    $b.a(:class => "button button_token run_token", :text => "runs").click
-    Watir::Wait.until(30) {$b.execute_script("return jQuery.active") == 0}
+    cy.goToRunPage()
+    cy.get('tr').contains("run_name 1")
+      .click()
+  /**
 
-    # $b.element(:class => "button2", :text => "+ new runs").click
-    run = $b.element(:class => ["set_token", "run_token"], :text => "run_name 1").click
-    Watir::Wait.until(30) {$b.execute_script("return jQuery.active") == 0}
-  end
 
 \end{verbatim}
 
@@ -177,17 +174,7 @@ want on this page.
     other sample} button so that you have three lines to add a sample.}
 \begin{verbatim}
   cy.log("// test_007_add_new_samples_line_in_run")
-    $b.element(:class => "button2", :text => "+ add samples").click
-    Watir::Wait.until(30) {$b.execute_script("return jQuery.active") == 0}
-
-    # change source for file (if available)
-    if $b.element(:type => "radio", :id => "source_computer").present?
-      $b.element(:type => "radio", :id => "source_computer").click
-    end
-  
-    $b.span(:id => "file_button").click
-    $b.span(:id => "file_button").click
-  end
+    // Do by the next cypress function call
 
 \end{verbatim}
 
@@ -196,11 +183,10 @@ want on this page.
   tags, as previously.}
 \begin{verbatim}
   cy.log("// test_008_upload_new_samples_in_run")
-    path = "../../../../../../tutorial/"
-    $b.fill_sample_form(0, "2010-01-01", "Sample 1 from tutorial server test #functional #tutorial", path+"run1-sample1.fasta", nil)
-    $b.fill_sample_form(1, "2010-01-01", "Sample 2 from tutorial server test #functional #tutorial", path+"run1-sample2.fasta", nil)
-    $b.fill_sample_form(2, "2010-01-01", "Sample 3 from tutorial server test #functional #tutorial", path+"run1-sample3.fasta", nil)
-  end
+    var path = "../../../../../../tutorial/"
+    cy.addSample(undefined, "computer", "tutorial/run1-sample1.fasta", undefined, "2010-01-01", "Sample 1 from tutorial server test #functional #tutorial")
+    cy.addSample(undefined, "computer", "tutorial/run1-sample2.fasta", undefined, "2010-01-01", "Sample 2 from tutorial server test #functional #tutorial")
+    cy.addSample(undefined, "computer", "tutorial/run1-sample3.fasta", undefined, "2010-01-01", "Sample 3 from tutorial server test #functional #tutorial")
 
 \end{verbatim}
 
@@ -219,10 +205,14 @@ need to modify this field.
  
   cy.log("// test_009_upload_sample_set_common_sets")
     # $b.fill_sample_token_input_by_arrow(0, 3) # by arrow move; select third sample in list (patient "Last_name_1")
-    $b.fill_sample_token_input_by_name(0, "Last_name_1")  # by text setting
-    $b.fill_sample_token_input_by_name(1, "Last_name_2")  # by text setting
-    $b.fill_sample_token_input_by_name(2, "Last_name_3")  # by text setting
-    $b.send_keys :enter
+
+    // cy.get('tr').contains("Last_name_1 ")
+    // cy.get('tr').contains("Last_name_2 ")
+    // cy.get('tr').contains("Last_name_3 ")
+    // $b.fill_sample_token_input_by_name(0, "Last_name_1")  # by text setting
+    // $b.fill_sample_token_input_by_name(1, "Last_name_2")  # by text setting
+    // $b.fill_sample_token_input_by_name(2, "Last_name_3")  # by text setting
+    // $b.send_keys :enter
   end
 
 \end{verbatim}
