--- a/doc/tutorial/tutorial-vidjil-server.tex
+++ b/doc/tutorial/tutorial-vidjil-server.tex
@@ -29,7 +29,27 @@ describe('Tutorial server', function () {
 
     })
 
-  it('01-tutorial-server',  function() {
+
+    it('01-Remove anon for public grp',  function() {
+        cy.login(Cypress.env('host'))
+        cy.close_tips()
+
+        cy.goToGroupsPage()
+        var grp_public = 3
+
+        cy.get('#row_group_'+grp_public+' > #col_access_'+grp_public)
+          .should("contain", " //")
+
+        cy.setGroupRight(grp_public, ["anon"], true)
+
+        cy.goToGroupsPage()
+        cy.get('#row_group_'+grp_public+' > #col_access_'+grp_public)
+          .should("contain", "a //")
+
+    })
+
+
+  it('02-tutorial-server',  function() {
 
 
 \end{verbatim}
