--- a/doc/tutorial/tutorial-quality.tex
+++ b/doc/tutorial/tutorial-quality.tex
@@ -43,13 +43,14 @@ TRG \fl 197.6 }
 
     cy.log("// test_A_quality_02_sample_log")
     cy.get('.button > .icon-info').click()
-    cy.get('#info_timepoint').should("be.visible")
+    cy.get('#modal_line_title_info_timepoint_reads').should("be.visible")
 
-    cy.get('#info_timepoint_reads').contains('2390273')
-    cy.get('#info_timepoint_analyzed_reads').contains('1967338')
-    cy.get('#info_timepoint_log').contains('IGH               ->   562520   314.5      31770   0.056')
-    cy.get('#info_timepoint_log').contains('TRG               ->  1403126   197.6      73089   0.052')
-    cy.get('#info_timepoint_log').contains('UNSEG only V/5\'   ->   332125   191.2')
+    cy.get('#modal_line_value_info_timepoint_reads').contains('2390273')
+    cy.get('#modal_line_value_info_timepoint_analyzed_reads').contains('1967338')
+    cy.get('#modal_line_value_info_timepoint_log').contains('IGH               ->   562520   314.5      31770   0.056')
+    cy.get('#modal_line_value_info_timepoint_log').contains('TRG               ->  1403126   197.6      73089   0.052')
+    cy.get('#modal_line_value_info_timepoint_log').contains('UNSEG only V/5\'   ->   332125   191.2')
+
 
     cy.get('.data-container > .closeButton > .icon-cancel').click()
     cy.get('#info_timepoint').should("not.exist")
