--- a/docker/vidjil-server2/Readme
+++ b/docker/vidjil-server2/Readme
@@ -16,7 +16,7 @@ start docker
 docker-compose -f docker-compose-py4web.yml up -d
 
 #step 4
-load backup .sql file
+load backup .sql file ( un fichier de backup se trouve sur bbi:/mnt/data/export/db-backup.sql )
 mysql --protocol=TCP --port=3307 -u vidjil -prootpass vidjil < db-backup.sql 
 
 #step 5
