--- a/docker/vidjil-server2/Readme
+++ b/docker/vidjil-server2/Readme
@@ -1,31 +1,35 @@
 First start
 
-#step 0 
-build docker image
-docker build --no-cache -t vidjil/server2:latest . 
+#step 0
+run 'make install' ans 'make init' inside /vidjil/docker/server/py4web
 
-#step 1
-Make sure your py4web/vidjil/databases and mysql folder are empty (in case you mounted those volumes in your docker-compose)
+#step 1 
+build docker image
+'docker build --no-cache -t vidjil/server2:latest . '
 
 #step 2
-start mysql service first 
-docker-compose -f docker-compose-py4web.yml up -d mysql
+Make sure vidjil/server/py4web/vidjil/databases 
+and vidjil/docker/volumes/mysql2 folders are empty (in case you mounted those volumes in your docker-compose)
 
 #step 3
-start docker
-docker-compose -f docker-compose-py4web.yml up -d
+start mysql service first 
+'docker-compose -f docker-compose-py4web.yml up -d mysql'
 
 #step 4
-load backup .sql file ( un fichier de backup se trouve sur bbi:/mnt/data/export/db-backup.sql )
-mysql --protocol=TCP --port=3307 -u vidjil -prootpass vidjil < db-backup.sql 
+start docker 
+docker-compose -f docker-compose-py4web.yml up -d
 
 #step 5
-stop docker
-docker-compose down --remove-orphans
+load backup .sql file ( un fichier de backup se trouve sur bbi:/mnt/data/export/db-backup.sql )
+'mysql --protocol=TCP --port=3307 -u vidjil -prootpass vidjil < db-backup.sql'
 
 #step 6
+stop docker
+'docker-compose down --remove-orphans'
+
+#step 7
 start docker again
-docker-compose -f docker-compose-py4web.yml up -d
+'docker-compose -f docker-compose-py4web.yml up -d'
 
 
 localhost               > vidjil/browser
