--- a/doc/tutorial/tutorial-clones.tex
+++ b/doc/tutorial/tutorial-clones.tex
@@ -279,7 +279,7 @@ After this rename, you can see that the clone is still selected.
 \begin{verbatim}
   //////////////////////////////////
   cy.log("// test_B_clones_09_multiselection")
-    cy.changePreset("read length distribution")
+    cy.changePreset("visu", "read length distribution")
     // to verify correct selection, We will look in segmenter the presence if clone entrie
     // Maybe another method could be more acurate
 
@@ -662,7 +662,7 @@ insertions.
   ///////////////////////////////////////
   cy.log("// test_B_clones_26_change_scatter_axis")
     // change preset, first time manually as user can do (don't use $b.scatterplot_select_preset this time)
-    cy.changePreset("V/N length")
+    cy.changePreset("visu", "V/N length")
 
     cy.get('#id_legend_x').should("have.text", "V/5' gene")
     cy.get('#id_legend_y').should("have.text", "N length")
@@ -680,7 +680,7 @@ Then you can continue aligning and clustering clones if necessary.
 \begin{verbatim}
   ///////////////////////////////////
   cy.log("// test_B_clones_27_change_preset_2")
-    cy.changePreset("read length / GC content")
+    cy.changePreset("visu", "read length / GC content")
 
     cy.get('#id_legend_x').should("have.text", "Reads length")
     cy.get('#id_legend_y').should("have.text", "GC content")
@@ -830,7 +830,7 @@ with the \com{color by} menu.
   //////////////////////////////
   cy.log("// test_B_clones_30_color_mode")
 
-    cy.changePreset("V/J (genes)")
+    cy.changePreset("visu", "V/J (genes)")
     cy.get("#id_label_x_IGHV1-2") // scatter plot legend X is correct after preset change
     cy.get("#id_label_y_IGHJ1")   // scatter plot legend Y is correct after preset change
 
@@ -860,7 +860,7 @@ Continuous axes are shown with a radient color.
   //////////////////////////////////
   cy.log("// test_B_clones_31_color_gradient")
 
-    cy.changePreset("CDR3 length distribution")
+    cy.changePreset("visu", "CDR3 length distribution")
     cy.changeColorby("Size")
     cy.update_icon()
 
