--- a/doc/tutorial/tutorial-clones.tex
+++ b/doc/tutorial/tutorial-clones.tex
@@ -482,7 +482,7 @@ By default in the bottom plot (the \textit{grid}), the clones
     cy.selectClone(0)
     cy.get("body").type("0")
 
-    cy.get('#id_label_x_IGHV3-13').click()
+    cy.get('#visu_id_label_x_IGHV3-13').click()
     cy.update_icon()
 
     // control that these clonotype is selected and visible in semgenter
@@ -664,11 +664,11 @@ insertions.
     // change preset, first time manually as user can do (don't use $b.scatterplot_select_preset this time)
     cy.changePreset("visu", "V/N length")
 
-    cy.get('#id_legend_x').should("have.text", "V/5' gene")
-    cy.get('#id_legend_y').should("have.text", "N length")
+    cy.get('#visu_id_legend_x').should("have.text", "V/5' gene")
+    cy.get('#visu_id_legend_y').should("have.text", "N length")
 
-    cy.get('#id_label_x_IGHV1-2').should("exist").should("be.visible")
-    cy.get('#id_label_y_\\?').should("exist").should("be.visible")
+    cy.get('#visu_id_label_x_IGHV1-2').should("exist").should("be.visible")
+    cy.get('#visu_id_label_y_\\?').should("exist").should("be.visible")
 
 
 \end{verbatim}
@@ -682,10 +682,10 @@ Then you can continue aligning and clustering clones if necessary.
   cy.log("// test_B_clones_27_change_preset_2")
     cy.changePreset("visu", "read length / GC content")
 
-    cy.get('#id_legend_x').should("have.text", "Reads length")
-    cy.get('#id_legend_y').should("have.text", "GC content")
+    cy.get('#visu_id_legend_x').should("have.text", "Reads length")
+    cy.get('#visu_id_legend_y').should("have.text", "GC content")
 
-    cy.get('#id_label_x_\\?').should("exist").should("be.visible")
+    cy.get('#visu_id_label_x_\\?').should("exist").should("be.visible")
 
 
 \end{verbatim}
@@ -707,19 +707,19 @@ In the bar plot mode, pass the mouse over the bars: What happens?}
     cy.get("body").type(0)
     cy.update_icon()
 
-    cy.get('#id_legend_x').should("have.text", "V/5' gene")
-    cy.get('#id_legend_y').should("have.text", "J/3' gene")
+    cy.get('#visu_id_legend_x').should("have.text", "V/5' gene")
+    cy.get('#visu_id_legend_y').should("have.text", "J/3' gene")
 
     cy.get("#visu_bar").click({force: true})
     cy.update_icon()
 
-    cy.get('#id_legend_x').should("have.text", "V/5' gene") // Correct legend for axe X after switch in bar mode
-    cy.get('#id_legend_y').should("have.text", "Size")      // Correct legend for axe Y after switch in bar mode
+    cy.get('#visu_id_legend_x').should("have.text", "V/5' gene") // Correct legend for axe X after switch in bar mode
+    cy.get('#visu_id_legend_y').should("have.text", "Size")      // Correct legend for axe Y after switch in bar mode
 
     cy.get("#visu_plot").click({force: true})
     cy.update_icon()
-    cy.get('#id_legend_x').should("have.text", "V/5' gene") // Correct legend for axe X after switch back in bubble mode"
-    cy.get('#id_legend_y').should("have.text", "J/3' gene") // Correct legend for axe Y after switch back in bubble mode"
+    cy.get('#visu_id_legend_x').should("have.text", "V/5' gene") // Correct legend for axe X after switch back in bubble mode"
+    cy.get('#visu_id_legend_y').should("have.text", "J/3' gene") // Correct legend for axe Y after switch back in bubble mode"
 
 
 \end{verbatim}
@@ -742,81 +742,81 @@ In the bar plot mode, pass the mouse over the bars: What happens?}
 
     cy.get("body").type(0)
     cy.update_icon()
-    cy.get('#id_legend_x').should("have.text", "V/5' gene") // Correct legend for axe X for preset 0
-    cy.get('#id_legend_y').should("have.text", "J/3' gene") // Correct legend for axe Y for preset 0
-    // cy.get("#id_label_x_IGHV1-2") // scatterplot_legend X at init; IGHV1-2
-    // cy.get("#id_label_y_IGHJ1")   // scatterplot_legend Y at init; IGHJ-1
+    cy.get('#visu_id_legend_x').should("have.text", "V/5' gene") // Correct legend for axe X for preset 0
+    cy.get('#visu_id_legend_y').should("have.text", "J/3' gene") // Correct legend for axe Y for preset 0
+    // cy.get("#visu_id_label_x_IGHV1-2") // scatterplot_legend X at init; IGHV1-2
+    // cy.get("#visu_id_label_y_IGHJ1")   // scatterplot_legend Y at init; IGHJ-1
 
     cy.get("body").type(1)
     cy.update_icon()
-    cy.get('#id_legend_x').should("have.text", "V/5' allele") // Correct legend for axe X for preset 1
-    cy.get('#id_legend_y').should("have.text", "J/3' allele") // Correct legend for axe Y for preset 1
-    // cy.get("#id_label_x_IGHV1-2*04") // scatterplot_legend X with shortcut/preset XXX is: IGHV1-2
-    // cy.get("#id_label_y_IGHJ1")      // scatterplot_legend Y with shortcut/preset XXX is: IGHJ-1
+    cy.get('#visu_id_legend_x').should("have.text", "V/5' allele") // Correct legend for axe X for preset 1
+    cy.get('#visu_id_legend_y').should("have.text", "J/3' allele") // Correct legend for axe Y for preset 1
+    // cy.get("#visu_id_label_x_IGHV1-2*04") // scatterplot_legend X with shortcut/preset XXX is: IGHV1-2
+    // cy.get("#visu_id_label_y_IGHJ1")      // scatterplot_legend Y with shortcut/preset XXX is: IGHJ-1
 
 
     cy.get("body").type(2)
     cy.update_icon()
-    cy.get('#id_legend_x').should("have.text", "V/5' gene") // Correct legend for axe X for preset 2
-    cy.get('#id_legend_y').should("have.text", "N length")  // Correct legend for axe Y for preset 2
-    // cy.get("#id_label_x_IGHV1-2") // scatterplot_legend X with shortcut/preset XXX is: IGHV1-2
-    // cy.get("#id_label_y_\\?")     // scatterplot_legend Y with shortcut/preset XXX is: IGHJ-1
+    cy.get('#visu_id_legend_x').should("have.text", "V/5' gene") // Correct legend for axe X for preset 2
+    cy.get('#visu_id_legend_y').should("have.text", "N length")  // Correct legend for axe Y for preset 2
+    // cy.get("#visu_id_label_x_IGHV1-2") // scatterplot_legend X with shortcut/preset XXX is: IGHV1-2
+    // cy.get("#visu_id_label_y_\\?")     // scatterplot_legend Y with shortcut/preset XXX is: IGHJ-1
 
     cy.get("body").type(3)
     cy.update_icon()
-    cy.get('#id_legend_x').should("have.text", "Reads length") // Correct legend for axe X for preset 3
-    cy.get('#id_legend_y').should("have.text", "Locus")        // Correct legend for axe Y for preset 3
-    // cy.get("#id_label_x_20")  // scatterplot_legend X with shortcut/preset XXX is: IGHV1-2
-    // cy.get("#id_label_y_IGH") // scatterplot_legend Y with shortcut/preset XXX is: IGHJ-1
+    cy.get('#visu_id_legend_x').should("have.text", "Reads length") // Correct legend for axe X for preset 3
+    cy.get('#visu_id_legend_y').should("have.text", "Locus")        // Correct legend for axe Y for preset 3
+    // cy.get("#visu_id_label_x_20")  // scatterplot_legend X with shortcut/preset XXX is: IGHV1-2
+    // cy.get("#visu_id_label_y_IGH") // scatterplot_legend Y with shortcut/preset XXX is: IGHJ-1
 
     cy.get("body").type(4)
     cy.update_icon()
-    cy.get('#id_legend_x').should("have.text", "Reads length") // Correct legend for axe X for preset 4
-    cy.get('#id_legend_y').should("have.text", "Size")         // Correct legend for axe Y for preset 4
-    // cy.get("#id_label_x_20")   // scatterplot_legend X with shortcut/preset XXX is: IGHV1-2
-    // cy.get("#id_label_y_20\%") // scatterplot_legend Y with shortcut/preset XXX is: IGHJ-1
+    cy.get('#visu_id_legend_x').should("have.text", "Reads length") // Correct legend for axe X for preset 4
+    cy.get('#visu_id_legend_y').should("have.text", "Size")         // Correct legend for axe Y for preset 4
+    // cy.get("#visu_id_label_x_20")   // scatterplot_legend X with shortcut/preset XXX is: IGHV1-2
+    // cy.get("#visu_id_label_y_20\%") // scatterplot_legend Y with shortcut/preset XXX is: IGHJ-1
 
     cy.get("body").type(5)
     cy.update_icon()
-    cy.get('#id_legend_x').should("have.text", "V/5' gene") // Correct legend for axe X for preset 5
-    cy.get('#id_legend_y').should("have.text", "Size")      // Correct legend for axe Y for preset 5
-    // cy.get("#id_label_x_IGHV1-2") //scatterplot_legend X with shortcut/preset XXX is: IGHV1-2
-    // cy.get("#id_label_y_16\%")    //scatterplot_legend Y with shortcut/preset XXX is: IGHJ-1
+    cy.get('#visu_id_legend_x').should("have.text", "V/5' gene") // Correct legend for axe X for preset 5
+    cy.get('#visu_id_legend_y').should("have.text", "Size")      // Correct legend for axe Y for preset 5
+    // cy.get("#visu_id_label_x_IGHV1-2") //scatterplot_legend X with shortcut/preset XXX is: IGHV1-2
+    // cy.get("#visu_id_label_y_16\%")    //scatterplot_legend Y with shortcut/preset XXX is: IGHJ-1
 
     cy.get("body").type(6)
     cy.update_icon()
-    cy.get('#id_legend_x').should("have.text", "N length") // Correct legend for axe X for preset 6
-    cy.get('#id_legend_y').should("have.text", "Size")     // Correct legend for axe Y for preset 6
-    // cy.get("#id_label_x_\\?")  // scatterplot_legend X with shortcut/preset XXX is: IGHV1-2
-    // cy.get("#id_label_y_55\%") // scatterplot_legend Y with shortcut/preset XXX is: IGHJ-1
+    cy.get('#visu_id_legend_x').should("have.text", "N length") // Correct legend for axe X for preset 6
+    cy.get('#visu_id_legend_y').should("have.text", "Size")     // Correct legend for axe Y for preset 6
+    // cy.get("#visu_id_label_x_\\?")  // scatterplot_legend X with shortcut/preset XXX is: IGHV1-2
+    // cy.get("#visu_id_label_y_55\%") // scatterplot_legend Y with shortcut/preset XXX is: IGHJ-1
 
     cy.get("body").type(7)
     cy.update_icon()
-    cy.get('#id_legend_x').should("have.text", "CDR3 length") // Correct legend for axe X for preset 7
-    cy.get('#id_legend_y').should("have.text", "Size")        // Correct legend for axe Y for preset 7
-    // cy.get("#id_label_x_") // scatterplot_legend X with shortcut/preset XXX is: IGHV1-2
-    // cy.get("#id_label_y_") // scatterplot_legend Y with shortcut/preset XXX is: IGHJ-1
+    cy.get('#visu_id_legend_x').should("have.text", "CDR3 length") // Correct legend for axe X for preset 7
+    cy.get('#visu_id_legend_y').should("have.text", "Size")        // Correct legend for axe Y for preset 7
+    // cy.get("#visu_id_label_x_") // scatterplot_legend X with shortcut/preset XXX is: IGHV1-2
+    // cy.get("#visu_id_label_y_") // scatterplot_legend Y with shortcut/preset XXX is: IGHJ-1
 
     cy.get("body").type(8)
     cy.update_icon()
-    cy.get('#id_legend_x').should("have.text", "J/3' gene") // Correct legend for axe X for preset 8
-    cy.get('#id_legend_y').should("have.text", "Size")      // Correct legend for axe Y for preset 8
-    // cy.get("#id_label_x_") // scatterplot_legend X with shortcut/preset XXX is: IGHV1-2
-    // cy.get("#id_label_y_") // scatterplot_legend Y with shortcut/preset XXX is: IGHJ-1
+    cy.get('#visu_id_legend_x').should("have.text", "J/3' gene") // Correct legend for axe X for preset 8
+    cy.get('#visu_id_legend_y').should("have.text", "Size")      // Correct legend for axe Y for preset 8
+    // cy.get("#visu_id_label_x_") // scatterplot_legend X with shortcut/preset XXX is: IGHV1-2
+    // cy.get("#visu_id_label_y_") // scatterplot_legend Y with shortcut/preset XXX is: IGHJ-1
 
     cy.get("body").type(9)
     cy.update_icon()
-    cy.get('#id_legend_x').should("have.text", "Size")         // Correct legend for axe X for preset 9
-    cy.get('#id_legend_y').should("have.text", "Size (other)") // Correct legend for axe Y for preset 9
-    // cy.get("#id_label_x_") // scatterplot_legend X with shortcut/preset XXX is: IGHV1-2
-    // cy.get("#id_label_y_") // scatterplot_legend Y with shortcut/preset XXX is: IGHJ-1
+    cy.get('#visu_id_legend_x').should("have.text", "Size")         // Correct legend for axe X for preset 9
+    cy.get('#visu_id_legend_y').should("have.text", "Size (other)") // Correct legend for axe Y for preset 9
+    // cy.get("#visu_id_label_x_") // scatterplot_legend X with shortcut/preset XXX is: IGHV1-2
+    // cy.get("#visu_id_label_y_") // scatterplot_legend Y with shortcut/preset XXX is: IGHJ-1
 
     cy.get("body").type(0)
     cy.update_icon()
-    cy.get('#id_legend_x').should("have.text", "V/5' gene") // Correct legend for axe X for preset 0
-    cy.get('#id_legend_y').should("have.text", "J/3' gene") // Correct legend for axe Y for preset 0
-    // cy.get("#id_label_x_IGHV1-2")// scatterplot_legend X with shortcut/preset XXX is: IGHV1-2
-    // cy.get("#id_label_y_\\?")    // scatterplot_legend Y with shortcut/preset XXX is: IGHJ-1
+    cy.get('#visu_id_legend_x').should("have.text", "V/5' gene") // Correct legend for axe X for preset 0
+    cy.get('#visu_id_legend_y').should("have.text", "J/3' gene") // Correct legend for axe Y for preset 0
+    // cy.get("#visu_id_label_x_IGHV1-2")// scatterplot_legend X with shortcut/preset XXX is: IGHV1-2
+    // cy.get("#visu_id_label_y_\\?")    // scatterplot_legend Y with shortcut/preset XXX is: IGHJ-1
 
 \end{verbatim}
 
@@ -831,8 +831,8 @@ with the \com{color by} menu.
   cy.log("// test_B_clones_30_color_mode")
 
     cy.changePreset("visu", "V/J (genes)")
-    cy.get("#id_label_x_IGHV1-2") // scatter plot legend X is correct after preset change
-    cy.get("#id_label_y_IGHJ1")   // scatter plot legend Y is correct after preset change
+    cy.get("#visu_id_label_x_IGHV1-2") // scatter plot legend X is correct after preset change
+    cy.get("#visu_id_label_y_IGHJ1")   // scatter plot legend Y is correct after preset change
 
     // control color state at init
     cy.get('.gradient').should('not.exist')
@@ -1055,18 +1055,18 @@ clicked on.
   cy.log("// test_B_clones_37_shortcut")
     cy.get("body").type(0) // return to a grap with locus 
     cy.update_icon()
-    cy.get('#id_label_x_IGHV1-2').should("exist").should("be.visible")
-    cy.get('#id_label_y_IGHJ1').should("exist").should("be.visible")
+    cy.get('#visu_id_label_x_IGHV1-2').should("exist").should("be.visible")
+    cy.get('#visu_id_label_y_IGHJ1').should("exist").should("be.visible")
 
     cy.get("body").type("g") // locus TRG
     cy.update_icon()
-    cy.get('#id_label_x_TRGV2').should("exist").should("be.visible")
-    cy.get('#id_label_y_TRGJ1').should("exist").should("be.visible")
+    cy.get('#visu_id_label_x_TRGV2').should("exist").should("be.visible")
+    cy.get('#visu_id_label_y_TRGJ1').should("exist").should("be.visible")
 
     cy.get("body").type("h") // locus IGH
     cy.update_icon()
-    cy.get('#id_label_x_IGHV1-2').should("exist").should("be.visible")
-    cy.get('#id_label_y_IGHJ1').should("exist").should("be.visible")
+    cy.get('#visu_id_label_x_IGHV1-2').should("exist").should("be.visible")
+    cy.get('#visu_id_label_y_IGHJ1').should("exist").should("be.visible")
 
 
 \end{verbatim}
@@ -1078,13 +1078,13 @@ right part of the grid.
   cy.log("// test_B_clones_38_switch_locus_by_scatterplot_click")
     cy.get("body").type(0) // locus IGH
     cy.update_icon()
-    cy.get('#id_label_x_IGHV1-2').should("exist").should("be.visible") // scatterplot_legend X at init; IGHV1-2
-    cy.get('#id_label_y_IGHJ1').should("exist").should("be.visible")   // scatterplot_legend Y at init; IGHJ-1
+    cy.get('#visu_id_label_x_IGHV1-2').should("exist").should("be.visible") // scatterplot_legend X at init; IGHV1-2
+    cy.get('#visu_id_label_y_IGHJ1').should("exist").should("be.visible")   // scatterplot_legend Y at init; IGHJ-1
 
     cy.get('#id_sp_system_label_TRG > .sp_system').click()
     cy.update_icon()
-    cy.get('#id_label_x_TRGV2').should("exist").should("be.visible")
-    cy.get('#id_label_y_TRGJ1').should("exist").should("be.visible")
+    cy.get('#visu_id_label_x_TRGV2').should("exist").should("be.visible")
+    cy.get('#visu_id_label_y_TRGJ1').should("exist").should("be.visible")
 
 
 \end{verbatim}
