--- a/doc/tutorial/tutorial-clones.tex
+++ b/doc/tutorial/tutorial-clones.tex
@@ -1082,7 +1082,7 @@ right part of the grid.
     cy.get('#visu_id_label_x_IGHV1-2').should("exist").should("be.visible") // scatterplot_legend X at init; IGHV1-2
     cy.get('#visu_id_label_y_IGHJ1').should("exist").should("be.visible")   // scatterplot_legend Y at init; IGHJ-1
 
-    cy.get('#id_sp_system_label_TRG > .sp_system').click()
+    cy.get('#visu_id_sp_system_label_TRG > .sp_system').click()
     cy.update_icon()
     cy.get('#visu_id_label_x_TRGV2').should("exist").should("be.visible")
     cy.get('#visu_id_label_y_TRGJ1').should("exist").should("be.visible")
