--- a/doc/tutorial/tutorial-vidjil-server.tex
+++ b/doc/tutorial/tutorial-vidjil-server.tex
@@ -48,6 +48,8 @@ describe('Tutorial server', function () {
 
 
   it('02-tutorial-server',  function() {
+        cy.login(Cypress.env('host')) // Hack on random "logout"
+
 
 
 \end{verbatim}
