fix missing init

--- a/doc/tutorial/tutorial-vidjil-server.tex
+++ b/doc/tutorial/tutorial-vidjil-server.tex
@@ -8,6 +8,7 @@ describe('Tutorial server', function () {
         cy.close_tips()
     })
     beforeEach(function () {
+      cy.closeFlashAll()
     })
     afterEach(function () {
     })
