fix error on tutorial server and browser version. To squash

--- a/doc/tutorial/tutorial-vidjil-server.tex
+++ b/doc/tutorial/tutorial-vidjil-server.tex
@@ -8,7 +8,7 @@ describe('Tutorial server', function () {
         cy.close_tips()
     })
     beforeEach(function () {
-      cy.closeFlashAll()
+        cy.closeFlashAll()
     })
     afterEach(function () {
     })
@@ -49,7 +49,7 @@ describe('Tutorial server', function () {
 
 
   it('02-tutorial-server',  function() {
-        cy.login(Cypress.env('host')) // Hack on random "logout"
+        //cy.login(Cypress.env('host')) // Hack on random "logout"
 
 
 
