--- a/doc/tutorial/tutorial-vidjil-server.tex
+++ b/doc/tutorial/tutorial-vidjil-server.tex
@@ -49,7 +49,8 @@ describe('Tutorial server', function () {
 
 
   it('02-tutorial-server',  function() {
-        //cy.login(Cypress.env('host')) // Hack on random "logout"
+        cy.login(Cypress.env('host')) // Hack on random "logout"
+        cy.closeFlashAll()
 
 
 
