--- a/doc/tutorial/tutorial-server.tex
+++ b/doc/tutorial/tutorial-server.tex
@@ -241,7 +241,7 @@ launched.
 \question{To regularly check the status of your job you can click
   on the \com{reload} button at the bottom left of the page.
   Your process usually goes through the following stages: \com{QUEUED},
-  (possibly \com{STOPPED}), \com{ASSIGNED}, \com{RUNNING}, \com{COMPLETED} (or
+  (possibly \com{STOPPED}), \com{RUNNING}, \com{COMPLETED} (or
   \com{FAILED} when there is an issue, in such a case please contact us)}
 \begin{verbatim}
   cy.log("// test_012_sample_analysis")
