cypress 12.9: convert our cypress pipeline to new version
Need to rename spec files (xxx.cy.js); need to change some path for data file

Besed on cypress 12.9 (1y old) that we already use on a previous test. Can be after that updated to a more recent version.

--- a/doc/tutorial/tutorial-vidjil-server.tex
+++ b/doc/tutorial/tutorial-vidjil-server.tex
@@ -8,6 +8,8 @@ describe('Tutorial server', function () {
         cy.close_tips()
     })
     beforeEach(function () {
+        cy.login(Cypress.env('host'))
+        cy.visitpage(Cypress.env('host'))
         cy.closeFlashAll()
     })
     afterEach(function () {
