--- a/doc/tutorial/common-headers.tex
+++ b/doc/tutorial/common-headers.tex
@@ -14,6 +14,7 @@
 \usepackage{caption}
 \usepackage{array}
 \usepackage{fancyvrb}
+\usepackage{xparse}
 
 \setlength{\parskip}{2mm}
 \setlength{\parindent}{0pt}
